Fix stretched logo safari

--- a/frontend/style/sidebar.scss
+++ b/frontend/style/sidebar.scss
@@ -1,46 +1,46 @@
-.sidebar { 
-
-    background-color: #F7F6F3;
+.sidebar {
+    background-color: #f7f6f3;
 
     li {
         padding: 7px 0;
         &.nav-indent {
-            padding-left: 30px
+            padding-left: 30px;
         }
     }
     a {
         color: #333;
         &:hover {
             color: black;
-            background-color: #E8E7E5
+            background-color: #e8e7e5;
         }
         .fi {
             margin: 0 15px;
             font-size: 20px;
         }
     }
-    .active{
-        background-color:#E8E7E5;
+    .active {
+        background-color: #e8e7e5;
     }
     .flaticon-shuffle-1::before {
-        transform: rotate(180deg)
+        transform: rotate(180deg);
     }
 
-    .posthog-title{
-        font-weight:500;
-        font-size:20px;
+    .posthog-title {
+        font-weight: 500;
+        font-size: 20px;
         color: #333;
-        padding-left:15px;
+        padding-left: 15px;
         margin-top: 8px;
     }
 
-    .logo{
+    .logo {
         margin-left: 15px;
         width: 35px;
+        height: 43px;
     }
 
-    .logo-row{
-        padding:15px 15px 3rem;
+    .logo-row {
+        padding: 15px 15px 3rem;
     }
     .invite-team {
         position: fixed;
@@ -49,4 +49,3 @@
         margin-left: -15px;
     }
 }
-
